force-app/main/default/objects/Crew_Member__c/Crew_Member__c.object-meta.xml
<CustomObject>
    <label>Crew Member</label>
    <nameField>
        <displayFormat>CID-{00000}</displayFormat>
        <label>Crew ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crew Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>