force-app/main/default/objects/Crew_Member__c/fields/Assigned_Flight__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Crew Members</relationshipLabel>
    <relationshipName>Crew_Members</relationshipName>
    <type>Lookup</type>
</CustomField>