force-app/main/default/objects/Crew_Member__c/fields/Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>Certification_Status__c</fullName>
    <label>Certification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>