force-app/main/default/objects/Crew_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Assigned_Flight__c</columns>
    <columns>Experience_Years__c</columns>
    <columns>Certification_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>